--- a/debian/rules
+++ b/debian/rules
@@ -22,17 +22,15 @@ else
 endif
 
 ifeq ($(filter pkg.frr.nosystemd,$(DEB_BUILD_PROFILES)),)
-  DH_WITH_SYSTEMD=systemd,
   CONF_SYSTEMD=--enable-systemd=yes
 else
-  DH_WITH_SYSTEMD=
   CONF_SYSTEMD=--enable-systemd=no
 endif
 
 export PYTHON=python3
 
 %:
-	dh $@ --with=$(DH_WITH_SYSTEMD)autoreconf --parallel
+	dh $@ -Bbuild
 
 override_dh_auto_configure:
 	$(shell dpkg-buildflags --export=sh); \
@@ -77,7 +75,7 @@ override_dh_auto_install:
 ifeq ($(filter pkg.frr.nosystemd,$(DEB_BUILD_PROFILES)),)
 	cp tools/frr.service debian/frr.service
 endif
-	cp tools/frrinit.sh debian/frr.init
+	cp build/tools/frrinit.sh debian/frr.init
 	-rm -f debian/tmp/usr/lib/frr/frr
 
 # install config files
@@ -112,6 +110,11 @@ override_dh_makeshlibs:
 
 override_dh_missing:
 	dh_missing --fail-missing
+
+ifneq ($(filter nocheck,$(DEB_BUILD_PROFILES) $(DEB_BUILD_OPTIONS)),)
+override_dh_auto_test:
+	true
+endif
 
 override_dh_auto_clean:
 # we generally do NOT want a full distclean since that wipes both
